Added ingredient source option to UI
